data/derived/sp14/progs/unify/prog2041.ml.out
Characters 53-57:
  if x = true 
         ^^^^
Error: This expression has type bool but an expression was expected of type
         string
